add prudcts pages

--- a/gooverseas.html
+++ b/gooverseas.html
@@ -51,10 +51,8 @@
 			<div class="col-md-9 ftco-animate text-center">
 				<h1 class="mb-2 bread">中资落地服务</h1>
 				<p class="breadcrumbs">
-					<span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span>
-				<p>
-					<a href="gooverseas/hr/hr.html" class="btn btn-success px-4 py-3">出海孵化</a>
-					<a href="gooverseas/gooverseas/go.html" class="btn btn-success px-4 py-3"> 人才猎聘</a>
+					<a href="gooverseas/gooverseas/go.html" class="btn btn-success px-4 py-3">出海孵化</a>
+					<a href="gooverseas/hr/hr.html" class="btn btn-success px-4 py-3"> 人才猎聘</a>
 					<a href="gooverseas/marketing/marketing.html" class="btn btn-success px-4 py-3"> 市场营销</a>
 					<a href="gooverseas/admin/admin.html" class="btn btn-success px-4 py-3"> 行政服务</a>
 			</div>
@@ -64,13 +62,100 @@
 
 
 
+<section class="ftco-section bg-light">
+	<div class="container">
+		<div id = "rowBlogs" class="row" class = "wrapper">
+
+			<div class="col-md-12 col-lg-3 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="gooverseas/gooverseas/go.html" class="block-20 d-flex align-items-end" style="background-image: url('gooverseas/1.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">NEW</span>
+							<span class="yr">五星推荐</span>
+						</div>
+					</a>
+					<div class="text bg-white p-1">
+						<h3 class="heading"><a href="gooverseas/gooverseas/go.html">出海孵化</a></h3>
+						<p>睿泽国际为中资出海提供战略、投资、经贸对接、渠道拓展等高端咨询服务，助力企业深入了解本地市场及营商环境，找准出海方向。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="gooverseas/gooverseas/go.html" class="btn btn-secondary">查看服务详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="ml-auto mb-0">
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
 
 
-<section class="ftco-intro" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
+			<div class="col-md-12 col-lg-3 ftco-animate">
+				<div class="blog-entry">
+					<a href="gooverseas/hr/hr.html" class="block-20 d-flex align-items-end" style="background-image: url('gooverseas/hr/hr.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">New</span>
+							<span class="yr">五星推荐</span>
+						</div>
+					</a>
+					<div class="text bg-white p-1">
+						<h3 class="heading"><a href="gooverseas/hr/hr.html">人才猎聘</a></h3>
+						<p>睿泽国际为中资企业提供中英法西葡语高端人才猎聘服务，为企业觅得适合本地营商环境的高端人才，助力企业拓展南部欧洲市场。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="gooverseas/hr/hr.html" class="btn btn-secondary">查看现有岗位信息详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-12 col-lg-3 ftco-animate">
+				<div class="blog-entry">
+					<a href="gooverseas/marketing/marketing.html" class="block-20 d-flex align-items-end" style="background-image: url('gooverseas/marketing/marketing.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">NEW</span>
+							<span class="yr">五星推荐</span>
+						</div>
+					</a>
+					<div class="text bg-white p-1">
+						<h3 class="heading"><a href="gooverseas/marketing/marketing.html">市场营销</a></h3>
+						<p>睿泽国际为企业在伊比利亚半岛境内提供活动策划、物料设计制作、执行营销活动等服务，包括不限于展会、路演、峰会、公司年会、创业大赛等。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p  class="mb-0"><a href="gooverseas/marketing/marketing.html" class="btn btn-secondary">查看服务详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-12 col-lg-3 ftco-animate">
+				<div class="blog-entry">
+					<a href="gooverseas/admin/admin.html" class="block-20 d-flex align-items-end" style="background-image: url('gooverseas/admin/admin.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">NEW</span>
+							<span class="yr">五星推荐</span>
+						</div>
+					</a>
+					<div class="text bg-white p-1">
+						<h3 class="heading"><a href="gooverseas/admin/admin.html">行政服务</a></h3>
+						<p>睿泽国际为企业提供联系租房、装修设计、家具购买、物业公司、节日临时活动组织、家具租赁等公司行政业务，以及外派员工签证、本地居留卡办理、员工本地陪同翻译、员工保险等个人业务。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p  class="mb-0"><a href="gooverseas/admin/admin.html" class="btn btn-secondary">查看服务详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</div>
+</section>
+
+
+<section class="ftco-intro" style="background-image: url(gooverseas/1.jpg);" data-stellar-background-ratio="0.5">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 suscribete_form">
+				<h2>睿泽国际 —— 助力中资企业出海欧洲</h2>
+				<p class="mb-0">中资出海欧洲是一片很大的蓝海，投资界的观点认为，即便企业只专注海面上的浮游生物，也有机会获得巨大的收益，但在此过程中，既可能捕到鲨鱼，也可能遭遇深水区的挣扎与困难。
+					置身异国他乡，面对与国内迥异的语言、文化、法律，以及不确定的IT工作环境，正确选择合作伙伴，以便减少干扰，更专注于出海业务本身。</p>
+				<br>
 				<h2>商业洽谈请扫码联系</h2>
 				<div class="container-wrap">
 					<div class="row no-gutters">
