--- a/gooverseas/admin/admin.html
+++ b/gooverseas/admin/admin.html
@@ -44,37 +44,61 @@
 
 
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('../../images/bg_7.jpg');">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('../../images/bg_10.jpg');">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<h1 class="mb-2 bread">其他企业服务</h1>
+				<h3 class="mb-2 bread">中资落地服务</h3>
+				<h1 class="mb-2 bread">行政服务</h1>
 				<p class="breadcrumbs">
-					<span class="mr-2"><a href="../../index.html">Home <i class="ion-ios-arrow-forward"></i></a></span>
-				<p>
-					<a  href="../hr/hr.html" class="btn btn-success px-4 py-3">人才猎聘</a>
-					<a  href="../gooverseas/go.html" class="btn btn-info px-4 py-3"> 出海孵化</a>
-					<a  href="../marketing/marketing.html" class="btn btn-info px-4 py-3"> 市场营销</a>
-					<a href="/other.html" class="btn btn-info px-4 py-3"> 中资落地服务</a>
+					<span class="mr-2"><a  href="../gooverseas/go.html"> 出海孵化</a><i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a  href="../hr/hr.html">人才猎聘</a><i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a  href="../marketing/marketing.html"> 市场营销</a><i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../admin/admin.html"> 行政服务</a><i class="ion-ios-arrow-forward"></i></a></span>
 			</div>
 		</div>
 	</div>
 </section>
 
-<section class="ftco-section">
+
+<section class="ftco-section bg-light">
 	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 ftco-animate">
+		<div id = "rowBlogs" class="row" class = "wrapper">
 
-				<p>
 
-				</p>
-
+			<div class="col-md-6 col-lg-4 ftco-animate">
+				<div class="blog-entry">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('1.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">New</span>
+							<span class="day">企业业务</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a>为中资企业寻找合适办公场所</a></h3>
+						<p>办公室寻址、装修设计、物业公司、家具购买、节日临时活动组织、家具租赁。</p>
+					</div>
+				</div>
 			</div>
-		</div>
-	</div>
 
+
+			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('2.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">NEW</span>
+							<span class="day">员工业务</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a>为企业员工提供本地服务</a></h3>
+						<p >外派员工签证、本地居留卡办理、员工本地陪同翻译、员工保险等个人业务。</p>
+					</div>
+				</div>
+			</div>
+
+		</div>
 </section>
 
 
