--- a/gooverseas/hr/hr.html
+++ b/gooverseas/hr/hr.html
@@ -44,38 +44,106 @@
 
 
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('../../images/bg_7.jpg');">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('../../images/bg_10.jpg');">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<h1 class="mb-2 bread">其他企业服务</h1>
+				<h3 class="mb-2 bread">中资落地服务</h3>
+				<h1 class="mb-2 bread">人才猎聘</h1>
 				<p class="breadcrumbs">
-					<span class="mr-2"><a href="../../index.html">Home <i class="ion-ios-arrow-forward"></i></a></span>
-				<p>
-					<a  href="../hr/hr.html" class="btn btn-success px-4 py-3">人才猎聘</a>
-					<a  href="../gooverseas/go.html" class="btn btn-info px-4 py-3"> 出海孵化</a>
-					<a  href="../marketing/marketing.html" class="btn btn-info px-4 py-3"> 市场营销</a>
-					<a href="../admin/admin.html" class="btn btn-info px-4 py-3"> 中资落地服务</a>
+					<span class="mr-2"><a  href="../gooverseas/go.html"> 出海孵化</a><i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a  href="../hr/hr.html">人才猎聘</a><i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a  href="../marketing/marketing.html"> 市场营销</a><i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../admin/admin.html"> 行政服务</a><i class="ion-ios-arrow-forward"></i></a></span>
 			</div>
 		</div>
 	</div>
 </section>
 
-<section class="ftco-section">
+
+<section class="ftco-section bg-light">
 	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 ftco-animate">
+		<div class="row" class = "wrapper">
 
-				<p>
 
-				</p>
+			<div class="col-md-5 col-lg-6 ftco-animate">
+				<div class="blog-entry">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('1.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">NEW</span>
+							<span class="yr">2023-07</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h2>西班牙云技术工程师招聘</h2>
+						<p>职位类别：云技术工程师</p>
+						<p>工作地点：西班牙</p>
+						<p>工作年限：3年及以上</p>
+						<p>最低学历：本科及以上</p>
+						<p>所属行业：ICT</p>
+						<h4>职位描述</h4>
+						<p>1.负责所辖地区行业的市场洞察与分析、市场开拓、制定区域市场策略、营销方案的实施和维护工作；</p>
+						<p>2.负责客户IT解决方案对接；</p>
+						<p>3.负责客户的定期拜访、沟通，与客户建立长期而稳定的合作关系，协助客户做好IT技术维护；</p>
 
+
+						<h4>职位要求</h4>
+						<p>1.本科及以上学历，计算机、电子、通信、软件、数学等相关理工科专业，三年以上云/软件/网络或其他IT相关产品解决方案销售，对云技术有一定了解；</p>
+						<p>2.中文、英语、西班牙语商务交流水平；</p>
+						<p>3.对相关产品及市场有较深的理解，热爱解决方案销售工作，具备相关产品技术经验者优先；</p>
+						<p>4.熟悉相关行业特点及市场运作方式， 熟悉相关行业标准；</p>
+						<p>6.较强的沟通协调能力，良好的分析与解决问题的能力、商务谈判及人际关系处理能力；</p>
+						<p>7.高度的工作热情和良好的职业道德，具备较好的抗压能力，能适应出差。</p>
+
+
+
+					</div>
+				</div>
 			</div>
+
+			<div class="col-md-5 col-lg-6 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('0.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">已过期</span>
+							<span class="yr">2023-05</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h2>葡萄牙渠道销售主管招聘</h2>
+						<p>职位类别：渠道销售</p>
+						<p>工作地点：葡萄牙</p>
+						<p>工作年限：3年及以上</p>
+						<p>最低学历：本科及以上</p>
+						<p>所属行业：ICT</p>
+						<h4>职位描述</h4>
+						<p>1.负责所辖地区行业的市场洞察与分析、市场开拓、制定区域市场策略、营销方案的实施和维护工作；</p>
+						<p>2.依据公司策略，运用各种销售工具开发新客户，建立、发展和维护海外客户关系，拓展海外销售渠道，提升品牌影响力和市场份额；</p>
+						<p>3.负责客户的定期拜访、沟通，进行客户关系的维护和进一步开发，与客户建立长期而稳定的合作关系，协助客户做好本地渠道下沉；</p>
+						<p>4.主导区域内渠道拓展，承接区域/客户销售目标，拆解销售计划并负责落地，完成销售指标。</p>
+
+						<h4>职位要求</h4>
+						<p>1.本科及以上学历，计算机、电子、通信、软件、机械自动化等相关理工科专业，三年以上产品渠道销售、或解决方案销售、或相关行业产品销售经验；</p>
+						<p>2.中文、英语、葡萄牙语（懂西班牙语特别优秀者也可考虑）商务交流水平；</p>
+						<p>3.对相关产品及市场有较深的理解，热爱销售工作，对渠道销售有一定的理解，能主导市场渠道拓展与销售工作，具备相关产品技术经验者优先；</p>
+						<p>4.熟悉相关行业特点及市场运作方式， 熟悉相关行业标准；</p>
+						<p>5.具备良好的分析及市场判断能力，有运营管理经验者优先；</p>
+						<p>6.较强的沟通协调能力，良好的分析与解决问题的能力、商务谈判及人际关系处理能力；</p>
+						<p>7.高度的工作热情和良好的职业道德，具备较好的抗压能力，能适应出差。</p>
+
+					</div>
+				</div>
+			</div>
+
+
+
+
+
 		</div>
 	</div>
-
 </section>
+
 
 
 
