--- a/gooverseas/marketing/marketing.html
+++ b/gooverseas/marketing/marketing.html
@@ -44,19 +44,18 @@
 
 
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('../../images/bg_7.jpg');">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('../../images/bg_10.jpg');">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<h1 class="mb-2 bread">其他企业服务</h1>
+				<h3 class="mb-2 bread">中资落地服务</h3>
+				<h1 class="mb-2 bread">市场营销</h1>
 				<p class="breadcrumbs">
-					<span class="mr-2"><a href="../../index.html">Home <i class="ion-ios-arrow-forward"></i></a></span>
-				<p>
-					<a  href="../hr/hr.html" class="btn btn-success px-4 py-3">人才猎聘</a>
-					<a  href="../gooverseas/go.html" class="btn btn-info px-4 py-3"> 出海孵化</a>
-					<a  href="../marketing/marketing.html" class="btn btn-info px-4 py-3"> 市场营销</a>
-					<a href="../admin/admin.html" class="btn btn-info px-4 py-3"> 中资落地服务</a>
+					<span class="mr-2"><a  href="../gooverseas/go.html"> 出海孵化</a><i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a  href="../hr/hr.html">人才猎聘</a><i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a  href="../marketing/marketing.html"> 市场营销</a><i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../admin/admin.html"> 行政服务</a><i class="ion-ios-arrow-forward"></i></a></span>
 			</div>
 		</div>
 	</div>
