--- a/investment.html
+++ b/investment.html
@@ -50,9 +50,10 @@
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
 				<h1 class="mb-2 bread">金融投资保险服务</h1>
+				<h4 class="mb-2 bread">中文，英文，西语，法语，专业投资理财服务</h4>
 				<p>
-					<a href="investment/projects/investment_projects.html" class="btn btn-info px-4 py-3"> 金融投资项目</a>
-					<a href="investment/projects/investment_projects.html" class="btn btn-info px-4 py-3"> 资产管理</a>
+					<a href="investment/investment/investment_projects.html" class="btn btn-info px-4 py-3"> 金融投资项目</a>
+					<a href="investment/investment/investment_projects.html" class="btn btn-info px-4 py-3"> 资产管理</a>
 					<a href="investment/mapfre/mapfre_seguro.html" class="btn btn-info px-4 py-3"> MAPFRE保险</a>
 				</p>
 			</div>
@@ -68,17 +69,17 @@
 		<div id = "rowBlogs" class="row" class = "wrapper">
 			<div id = "dBlogs" class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="investment/projects/investment_projects.html" class="block-20 d-flex align-items-end" style="background-image: url('images/investment.jpg');">
+					<a href="investment/investment/investment_projects.html" class="block-20 d-flex align-items-end" style="background-image: url('images/investment.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">NEW</span>
 							<span class="yr">2023</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="investment/projects/investment_projects.html">金融投资项目</a></h3>
-						<p>睿泽国际CEO Yanik作为在欧洲从业20余年资深金融投行专家，经手无数投行业务，点击查看成功案例以及现有项目。</p>
+						<h3 class="heading"><a href="investment/investment/investment_projects.html">金融投资项目</a></h3>
+						<p>睿泽国际CEO Yanik作为在欧洲从业20余年资深金融投行专家，具有欧洲金融投资顾问执照EFA，为高净值客户提供专属，量身定制最佳风险收益全球配置解决方案。</p>
 						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="investment/projects/investment_projects.html" class="btn btn-secondary">查看项目详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="mb-0"><a href="investment/investment/investment_projects.html" class="btn btn-secondary">查看项目详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
 							</p>
 						</div>
@@ -89,17 +90,17 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
-					<a href="investment/projects/asset_projects.html" class="block-20 d-flex align-items-end" style="background-image: url('images/asset-management.jpg');">
+					<a href="investment/investment/asset_projects.html" class="block-20 d-flex align-items-end" style="background-image: url('images/asset-management.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">New</span>
 							<span class="yr">2023</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="investment/projects/asset_projects.html">资产管理</a></h3>
-						<p>睿泽国际CEO Yanik作为在欧洲唯一具有资产管理执照华人，为您提供个人资产管理以及全球资产配置服务。</p>
+						<h3 class="heading"><a href="investment/investment/asset_projects.html">资产管理</a></h3>
+						<p>睿泽国际CEO Yanik作为在欧洲唯一具有资产管理执照华人，面对高净值人士全球资产配置需求，提供一对一私人银行和家族资产规划管理。</p>
 						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="investment/projects/asset_projects.html" class="btn btn-secondary">查看项目详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="mb-0"><a href="investment/investment/asset_projects.html" class="btn btn-secondary">查看项目详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
 					</div>
 				</div>
