--- a/investment/mapfre/mapfre_seguro.html
+++ b/investment/mapfre/mapfre_seguro.html
@@ -49,12 +49,98 @@
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<h2 class="mb-2 bread">金融投资保险服务</h2>
+				<h3 class="mb-2 bread">金融投资保险服务</h3>
 				<h1 class="mb-2 bread">保险业务</h1>
 				<p class="breadcrumbs">
-					<span class="mr-2"><a href="../projects/investment_projects.html">金融投资项目 <i class="ion-ios-arrow-forward"></i></a></span>
-					<span class="mr-2"><a href="../projects/asset_projects.html">资产管理 <i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../investment/investment_projects.html">金融投资项目 <i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../investment/asset_projects.html">资产管理 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../mapfre/mapfre_seguro.html">MAPFRE保险 <i class="ion-ios-arrow-forward"></i></a></span>
+			</div>
+		</div>
+	</div>
+</section>
+
+
+
+
+
+
+<section class="ftco-section bg-light">
+	<div class="container">
+		<div class="row" class = "wrapper">
+
+
+			<div class="col-md-6 col-lg-4 ftco-animate">
+				<div class="blog-entry">
+					<a href="salud.html" class="block-20 d-flex align-items-end" style="background-image: url('salud.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">个人业务</span>
+							<span class="yr">医疗保险</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="salud.html">MAPFRE医疗保险</a></h3>
+						<p href="salud.html">MAPFRExxxxxxxx。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="salud.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="coche.html" class="block-20 d-flex align-items-end" style="background-image: url('coche.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">个人业务</span>
+							<span class="yr">汽车保险</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 href="coche.html" class="heading"><a href="#">MAPFRE汽车保险</a></h3>
+						<p >MAPFRE汽车保险XXXXXXXXXXXXXXXXX</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="coche.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="ml-auto mb-0">
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="vida.html" class="block-20 d-flex align-items-end" style="background-image: url('vida.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">个人业务</span>
+							<span class="yr">生命保险</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 href="vida.html" class="heading"><a href="#">MAPFRE生命保险</a></h3>
+						<p >MAPFRE生命保险XXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="vida.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="ml-auto mb-0">
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+</section>
+
+<section class="ftco-intro" style="background-image: url(mapfre.jpg);" data-stellar-background-ratio="0.5">
+	<div class="overlay"></div>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 suscribete_form">
+				<h2>MAPFRE业务介绍</h2>
+				<p class="mb-0">西班牙MAPFRE保险集团成立于1933年，是西班牙以及拉美市场最大的保险集团，全球分公司达244个，分布在39个国家。MAPFRE保险用户数多年来一直排在西班牙首位。</p>
 			</div>
 		</div>
 	</div>
@@ -64,43 +150,41 @@
 
 <section class="ftco-section bg-light">
 	<div class="container">
-		<div id = "rowBlogs" class="row" class = "wrapper">
+		<div  class="row" class = "wrapper">
 
 
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
-					<a href="https://www.vivo.com/es/products/x90-pro" class="block-20 d-flex align-items-end" style="background-image: url('mapfre-seguro.jpg');">
+					<a href="salud.html" class="block-20 d-flex align-items-end" style="background-image: url('salud.jpg');">
 						<div class="meta-date text-center p-2">
-							<span class="day">New</span>
-							<span class="day">1099€</span>
-							<span class="yr">5台起售</span>
+							<span class="day">公司业务</span>
+							<span class="yr">医疗保险</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="https://www.vivo.com/es/products/x90-pro">VIVO X90 Pro</a></h3>
-						<p href="products/mobile/mobile.html">VIVO X系列2023新款高档旗舰机，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
+						<h3 class="heading"><a href="salud.html">MAPFRE医疗保险</a></h3>
+						<p href="salud.html">MAPFRExxxxxxxx。</p>
 						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="https://www.vivo.com/es/products/x90-pro" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="mb-0"><a href="salud.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
 					</div>
 				</div>
 			</div>
 
 
-			<div id = "dBlogs" class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="https://www.vivo.com/es/products/v29-lite-5g" class="block-20 d-flex align-items-end" style="background-image: url('vivo/v29lite_1.jpg');">
+					<a href="coche.html" class="block-20 d-flex align-items-end" style="background-image: url('coche.jpg');">
 						<div class="meta-date text-center p-2">
-							<span class="day">NEW</span>
-							<span class="day">359€</span>
-							<span class="yr">5台起售</span>
+							<span class="day">公司业务</span>
+							<span class="yr">汽车保险</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 href="https://www.vivo.com/es/products/v29-lite-5g" class="heading"><a href="#">VIVO V29 Lite</a></h3>
-						<p >VIVO 2023年新款中档机型，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
+						<h3 href="coche.html" class="heading"><a href="#">MAPFRE汽车保险</a></h3>
+						<p >MAPFRE汽车保险XXXXXXXXXXXXXXXXX</p>
 						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="https://www.vivo.com/es/products/v29-lite-5g" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="mb-0"><a href="coche.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
 							</p>
 						</div>
@@ -108,7 +192,26 @@
 				</div>
 			</div>
 
+			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="vida.html" class="block-20 d-flex align-items-end" style="background-image: url('vida.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">公司业务</span>
+							<span class="yr">生命保险</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 href="vida.html" class="heading"><a href="#">MAPFRE生命保险</a></h3>
+						<p >MAPFRE生命保险XXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="vida.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="ml-auto mb-0">
+							</p>
+						</div>
+					</div>
+				</div>
 			</div>
+
 		</div>
 	</div>
 
