--- a/ittech.html
+++ b/ittech.html
@@ -63,12 +63,85 @@
 
 
 
+<section class="ftco-section bg-light">
+	<div class="container">
+		<div id = "rowBlogs" class="row" class = "wrapper">
+			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="ittech/cloud/cloud.html" class="block-20 d-flex align-items-end" style="background-image: url('ittech/cloud.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">NEW</span>
+							<span class="yr">2023</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="ittech/cloud/cloud.html">云技术解决方案</a></h3>
+						<p>睿泽国际作为华为云、Orange等公司高级partner，资深IT技术解决方案团队为企业提供最优质高效的云技术解决方案促进企业提高效率。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="ittech/cloud/cloud.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="ml-auto mb-0">
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-6 col-lg-4 ftco-animate">
+				<div class="blog-entry">
+					<a href="ittech/network/network.html" class="block-20 d-flex align-items-end" style="background-image: url('ittech/network/1.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">New</span>
+							<span class="yr">2023</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="ittech/network/network.html">企业网络解决方案</a></h3>
+						<p>睿泽国际作为华为企业网、锐捷网络等公司高级partner，资深IT技术解决方案团队为企业提供最优质高效的园区网、数据中心解决方案。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="ittech/network/network.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-6 col-lg-4 ftco-animate">
+				<div class="blog-entry">
+					<a href="ittech/security/security.html" class="block-20 d-flex align-items-end" style="background-image: url('ittech/security/1.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">NEW</span>
+							<span class="yr">2023</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="ittech/security/security.html">企业安保解决方案</a></h3>
+						<p>睿泽国际作为海康威视、大华等高级合作伙伴，提供视频监控、记录器、存储设备等安保解决方案，将物联感知、人工智能、大数据技术服务于千行百业。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p  class="mb-0"><a href="ittech/security/security.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
+
+	</div>
+</section>
+
+
+
 
 <section class="ftco-intro" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 suscribete_form">
+				<h2>数字化是企业发展的必由之路</h2>
+				<p class="mb-0">基础设施服务，让业务全球可达</p>
+				<p class="mb-0">技术即服务，让创新触手可及</p>
+				<p class="mb-0">经验即服务，让优秀得以复制</p>
+				<br>
 				<h2>商业洽谈请扫码联系</h2>
 				<div class="container-wrap">
 					<div class="row no-gutters">
