--- a/ittech/cloud/cloud.html
+++ b/ittech/cloud/cloud.html
@@ -44,39 +44,104 @@
 
 
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('../../images/bg_7.jpg');">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('../../images/bg_8.jpg');">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<h1 class="mb-2 bread">企业IT技术解决方案</h1>
+				<h3 class="mb-2 bread">企业IT技术</h3>
+				<h1 class="mb-2 bread">云技术解决方案</h1>
 				<p class="breadcrumbs">
-				<p>
-					<a href="cloud.html" class="btn btn-info px-4 py-3"> 云技术解决方案</a>
-					<a href="../network/network.html" class="btn btn-info px-4 py-3"> 企业网络解决方案</a>
-					<a href="../security/security.html" class="btn btn-info px-4 py-3"> 企业安保解决方案</a>
-				</p>
+					<span class="mr-2"><a href="cloud.html"> 云技术解决方案<i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../network/network.html"> 企业网络解决方案<i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../security/security.html"> 企业安保解决方案<i class="ion-ios-arrow-forward"></i></a></span>
 			</div>
 		</div>
 	</div>
 </section>
 
-<section class="ftco-section">
+
+<section class="ftco-section bg-light">
+	<div class="container">
+		<div class="row" class = "wrapper">
+
+			<div class="col-md-5 col-lg-6 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="huawei/huaweicloud.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/cloud/huawei/huaweicloud.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="yr">助力中资出海</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="huawei/huaweicloud.html">华为云 一切皆服务</a></h3>
+						<p>华为云持续创新，携手客户，让云无处不在，让智能无所不及，共建智能世界云底座。提供给租户安全的云产品和服务，构建安全可信的云服务。</p>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-5 col-lg-6 ftco-animate">
+				<div class="blog-entry">
+					<a href="orange/orangecloud.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/cloud/orange/1.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="yr">助力跨国公司走向全球</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="orange/orangecloud.html">Orange云</a></h3>
+						<p>Orange Business Services，作为法国知名电信运营商Orange旗下的B2B分支机构，Orange Business Services扮演着网络运营商和数字服务集成商的角色，
+							在IoT、云计算、大数据和人工智能、应用开发和网络安全等领域提供专业服务。
+							Orange Business Services长期重视创新技术，业务涵盖云技术、数字化与数据、网络、智能移动服务等多个领域，是拥有多源服务集成（MSI）专业能力的全球运营商级集成商。</p>
+					</div>
+				</div>
+			</div>
+
+
+		</div>
+	</div>
+</section>
+
+
+
+<section class="ftco-intro" style="background-image: url(../cloud.jpg);" data-stellar-background-ratio="0.5">
+	<div class="overlay"></div>
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-12 ftco-animate">
+			<div class="col-md-12 suscribete_form">
+				<h2>云技术 Cloud Technology</h2>
+				<p>基于云计算商业模式应用的网络技术、信息技术、整合技术、管理平台技术、应用技术等的总称</p>
+				<p>按需所用，灵活便利</p>
+				<p>随时随访问任何网络资源</p>
+				<p>多人共享资源池</p>
+				<p>快速重新部署灵活度</p>
+				<p>可被监控与量测的服务</p>
+				<br>
+				<h2>商业洽谈请扫码联系</h2>
+				<div class="container-wrap">
+					<div class="row no-gutters">
 
-				<p>
+						<div class="col-md-6 ftco-animate">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../images/whatsapp.png);">
+								<div class="icon mb-4 d-flex align-items-center justify-content-center">
+									<p><img src="../../images/whatsappQRCode.png" style="width: auto; height: 50%"></p>
+								</div>
+							</a>
+						</div>
 
-				</p>
+						<div class="col-md-6 ftco-animate">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../images/wechat.png);">
+								<div class="icon mb-4 d-flex align-items-center justify-content-center">
+									<p><img src="../../images/wechatQRCode.jpg" style="width: auto; height: 50%"></p>
+								</div>
+							</a>
+						</div>
 
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
-
 </section>
-
-
 
 
 <footer class="ftco-footer ftco-bg-dark ftco-section">
