--- a/news.html
+++ b/news.html
@@ -62,7 +62,6 @@
 	<div class="container">
 		<div id = "rowBlogs" class="row" class = "wrapper">
 
-<!--			一个blog单元-->
 
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
@@ -85,7 +84,7 @@
 
 
 
-			<div id = "dBlogs" class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+			<div  class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
 					<a href="news/20230710/news.html" class="block-20 d-flex align-items-end" style="background-image: url('news/20230710/1.jpg');">
 						<div class="meta-date text-center p-2">
@@ -96,7 +95,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="news/20230710/news.html">睿泽国际CEO Yanik 应邀出席华为云西班牙 Huawei Cloud Summit Spain 2023</a></h3>
-						<p href="news/20230710/news.html">2023年7月5日，Huawei Cloud Summit Spain 2023 在西班牙马德里举办，睿泽国际CEO Yanik Yang应邀出席活动</p>
+						<p>2023年7月5日，Huawei Cloud Summit Spain 2023 在西班牙马德里举办，睿泽国际CEO Yanik Yang应邀出席活动</p>
 						<div class="d-flex align-items-center mt-4">
 							<p class="mb-0"><a href="news/20230710/news.html" class="btn btn-secondary">Read more<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
@@ -106,114 +105,49 @@
 				</div>
 			</div>
 
+			<div  class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="news/20230424/news.html" class="block-20 d-flex align-items-end" style="background-image: url('news/20230424/1.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">24</span>
+							<span class="mos">April</span>
+							<span class="yr">2023</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="news/20230424/news.html">睿泽国际CEO Yanik与华为、马德里商会等一起接待互联网企业中资考察团</a></h3>
+						<p>2023年4月24日，国内互联网企业考察团赴西班牙考察，睿泽国际CEO Yanik作为本地投资顾问，陪同考察团与马德里商会、西班牙对外贸易局、本地律师事务所、华为西班牙等进行了深度交流。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="news/20230424/news.html" class="btn btn-secondary">Read more<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="ml-auto mb-0">
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
 
 
+			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="news/20230228/news.html" class="block-20 d-flex align-items-end" style="background-image: url('news/20230228/1.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">28</span>
+							<span class="mos">Feb</span>
+							<span class="yr">2023</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="news/20230228/news.html">睿泽国际CEO Yanik 应华为邀请参加MWC Barcelona 2023</a></h3>
+						<p href="news/20230228/news.html">2023年2月28日，MWC Barcelona 2023如期举办，睿泽国际CEO Yanik Yang应邀出席活动。一起为西班牙华为云Stasrtup Program启动举办亮灯仪式。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="news/20230228/news.html" class="btn btn-secondary">Read more<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="ml-auto mb-0">
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
 
-<!--			<div class="col-md-6 col-lg-4 ftco-animate">-->
-<!--				<div class="blog-entry">-->
-<!--					<a href="news.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_2.jpg');">-->
-<!--						<div class="meta-date text-center p-2">-->
-<!--							<span class="day">27</span>-->
-<!--							<span class="mos">January</span>-->
-<!--							<span class="yr">2019</span>-->
-<!--						</div>-->
-<!--					</a>-->
-<!--					<div class="text bg-white p-4">-->
-<!--						<h3 class="heading"><a href="#">Skills To Develop Your Child Memory</a></h3>-->
-<!--						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>-->
-<!--						<div class="d-flex align-items-center mt-4">-->
-<!--							<p class="mb-0"><a href="news.html" class="btn btn-secondary">Ver más<span class="ion-ios-arrow-round-forward"></span></a></p>-->
-<!--							<p class="ml-auto mb-0">-->
-<!--								<a href="#" class="mr-2">Admin</a>-->
-<!--							</p>-->
-<!--						</div>-->
-<!--					</div>-->
-<!--				</div>-->
-<!--			</div>-->
-<!--			<div class="col-md-6 col-lg-4 ftco-animate">-->
-<!--				<div class="blog-entry">-->
-<!--					<a href="news.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_3.jpg');">-->
-<!--						<div class="meta-date text-center p-2">-->
-<!--							<span class="day">27</span>-->
-<!--							<span class="mos">January</span>-->
-<!--							<span class="yr">2019</span>-->
-<!--						</div>-->
-<!--					</a>-->
-<!--					<div class="text bg-white p-4">-->
-<!--						<h3 class="heading"><a href="#">Skills To Develop Your Child Memory</a></h3>-->
-<!--						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>-->
-<!--						<div class="d-flex align-items-center mt-4">-->
-<!--							<p class="mb-0"><a href="news.html" class="btn btn-secondary">Ver más<span class="ion-ios-arrow-round-forward"></span></a></p>-->
-<!--							<p class="ml-auto mb-0">-->
-<!--								<a href="#" class="mr-2">Admin</a>-->
-<!--							</p>-->
-<!--						</div>-->
-<!--					</div>-->
-<!--				</div>-->
-<!--			</div>-->
-<!--			<div class="col-md-6 col-lg-4 ftco-animate">-->
-<!--				<div class="blog-entry">-->
-<!--					<a href="news.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_4.jpg');">-->
-<!--						<div class="meta-date text-center p-2">-->
-<!--							<span class="day">27</span>-->
-<!--							<span class="mos">January</span>-->
-<!--							<span class="yr">2019</span>-->
-<!--						</div>-->
-<!--					</a>-->
-<!--					<div class="text bg-white p-4">-->
-<!--						<h3 class="heading"><a href="#">Skills To Develop Your Child Memory</a></h3>-->
-<!--						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>-->
-<!--						<div class="d-flex align-items-center mt-4">-->
-<!--							<p class="mb-0"><a href="news.html" class="btn btn-secondary">Ver más<span class="ion-ios-arrow-round-forward"></span></a></p>-->
-<!--							<p class="ml-auto mb-0">-->
-<!--								<a href="#" class="mr-2">Admin</a>-->
-<!--							</p>-->
-<!--						</div>-->
-<!--					</div>-->
-<!--				</div>-->
-<!--			</div>-->
-<!--			<div class="col-md-6 col-lg-4 ftco-animate">-->
-<!--				<div class="blog-entry">-->
-<!--					<a href="news.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_5.jpg');">-->
-<!--						<div class="meta-date text-center p-2">-->
-<!--							<span class="day">27</span>-->
-<!--							<span class="mos">January</span>-->
-<!--							<span class="yr">2019</span>-->
-<!--						</div>-->
-<!--					</a>-->
-<!--					<div class="text bg-white p-4">-->
-<!--						<h3 class="heading"><a href="#">Skills To Develop Your Child Memory</a></h3>-->
-<!--						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>-->
-<!--						<div class="d-flex align-items-center mt-4">-->
-<!--							<p class="mb-0"><a href="news.html" class="btn btn-secondary">Ver más<span class="ion-ios-arrow-round-forward"></span></a></p>-->
-<!--							<p class="ml-auto mb-0">-->
-<!--								<a href="#" class="mr-2">Admin</a>-->
-<!--							</p>-->
-<!--						</div>-->
-<!--					</div>-->
-<!--				</div>-->
-<!--			</div>-->
-<!--			<div class="col-md-6 col-lg-4 ftco-animate">-->
-<!--				<div class="blog-entry">-->
-<!--					<a href="news.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_6.jpg');">-->
-<!--						<div class="meta-date text-center p-2">-->
-<!--							<span class="day">27</span>-->
-<!--							<span class="mos">January</span>-->
-<!--							<span class="yr">2019</span>-->
-<!--						</div>-->
-<!--					</a>-->
-<!--					<div class="text bg-white p-4">-->
-<!--						<h3 class="heading"><a href="#">Skills To Develop Your Child Memory</a></h3>-->
-<!--						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>-->
-<!--						<div class="d-flex align-items-center mt-4">-->
-<!--							<p class="mb-0"><a href="news.html" class="btn btn-secondary">Ver más<span class="ion-ios-arrow-round-forward"></span></a></p>-->
-<!--							<p class="ml-auto mb-0">-->
-<!--								<a href="#" class="mr-2">Admin</a>-->
-<!--							</p>-->
-<!--						</div>-->
-<!--					</div>-->
-<!--				</div>-->
-<!--			</div>-->
 		</div>
 		<div class="row no-gutters my-5">
 			<div class="col text-center">
@@ -232,6 +166,7 @@
 				</div>
 			</div>
 		</div>
+
 	</div>
 </section>
 
