--- a/about.html
+++ b/about.html
@@ -61,72 +61,69 @@
 <section class="ftco-section ftco-no-pt ftc-no-pb">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-5 order-md-last wrap-about py-5 wrap-about bg-light">
+			<div class="col-md-7 order-md-last wrap-about py-5 wrap-about bg-light">
 				<div class="text px-4 ftco-animate">
 					<h1 class="mb-4">公司简介</h1>
+					<p><a class="block-20 d-flex align-items-end"  style="background-image: url('images/teamwork.jpg');"></a></p>
 					<p>睿泽国际责任有限公司于2023年成立于西班牙马德里，依托在西20余年的经验，秉持合作、创新、协调的理念和价值观，为企业提供最好的服务。
 						公司吸纳西班牙和中国精英人士，包含跨学科硕博士，顺应中国经济深度融入世界经济的趋势，促进中国企业与西方国家资源高效配置。</p>
 					<p>公司与西班牙政府、中国政府部门、西班牙企业、中资企业之间的密切沟通合作，为中资企业在西营商起到桥梁的作用，主要业务范围包括：</p>
 					<p>1）金融保险服务：为企业寻找高收益投资机会，为企业寻找项目资金；为企业提供保险业务包括公司财产保险、员工医疗保险、公司事故险等，</p>
 					<p>2）企业IT技术解决方案：为企业在西营商提供办公基础IT设施服务，包括办公室及园区基础网络建设、企业办公软件、企业云基础设施、安保系统、企业太阳能电力，等。</p>
 					<p>3）产品代理：作为代理商代理企业产品在西销售，并在西推广运营产品。</p>
-					<p>4）其他企业服务：作为中资企业出海孵化器，帮助企业解决出海初期的公司相关事宜，为企业提供专业的西葡人才猎聘服务，为企业提供市场营销策划以及执行服务。</p>
+					<p>4）中资落地服务：作为中资企业出海孵化器，帮助企业解决出海初期的公司相关事宜，为企业提供专业的西葡人才猎聘服务，为企业提供市场营销策划以及执行服务。</p>
 					<br>
 					<p>当前公司已与solventis、MAPFRE、华为、VIVO、海康威视、锐捷网络、ORANGE、小米、OPPO、弘正、中国移动、马德里商会、加泰罗尼亚企业发展局、中国商会、Zaragoza旅游开发局、
 						等中西企业及政府部门、协会达成深度合作，为您竭诚服务。</p>
 				</div>
 			</div>
-			<div class="col-md-7 wrap-about py-5 pr-md-4 ftco-animate">
+			<div class="col-md-5 wrap-about py-5 pr-md-4 ftco-animate">
 				<h1>公司业务</h1>
-				<div class="row mt-5">
+				<div class="row mt-2">
 					<div class="services-2 d-flex">
-
-						<div class="icon mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-education"></span></div>
+						<div class="icon mt-2 mr-2 d-flex justify-content-center align-items-center"><span class="flaticon-education"></span></div>
 						<div class="text">
-							<h3>金融投资保险业务</h3>
-
-							<p></p>
-							<p>项目投资服务</p>
-							<p>资产管理服务</p>
-							<p>企业保险服务</p>
+							<h2><a href="investment.html">金融保险</a></h2>
+							<p><a href="investment/investment/investment_projects.html">金融投资服务</a></p>
+							<p><a href="investment/investment/asset_projects.html">资产管理服务</a></p>
+							<p><a href="investment/mapfre/mapfre_seguro.html">MAPFRE保险服务</a></p>
 						</div>
 					</div>
 				</div>
-				<div class="row mt-5">
+				<div class="row mt-2">
 					<div class="services-2 d-flex">
-						<div class="icon mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-diploma"></span></div>
+						<div class="icon mt-2 mr-2 d-flex justify-content-center align-items-center"><span class="flaticon-diploma"></span></div>
 						<div class="text">
-							<h3>企业IT技术解决方案</h3>
-							<p>云技术解决方案</p>
-							<p>企业IT基础设施解决方案</p>
-							<p>企业安保设施解决方案</p>
-							<p>数字能源解决方案</p>
+							<h2><a href="ittech.html">企业IT技术</a></h2>
+							<p><a href="ittech/cloud/cloud.html">云技术解决方案</a></p>
+							<p><a href="ittech/network/network.html">企业网络解决方案</a></p>
+							<p><a href="ittech/security/security.html">企业安保解决方案</a></p>
 						</div>
 					</div>
 				</div>
-				<div class="row mt-5">
+				<div class="row mt-2">
 					<div class="services-2 d-flex">
-						<div class="icon mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-jigsaw"></span></div>
+						<div class="icon mt-2 mr-2 d-flex justify-content-center align-items-center"><span class="flaticon-jigsaw"></span></div>
 						<div class="text">
-							<h3>产品代理</h3>
-							<p>智能手机</p>
-							<p>网络设备</p>
-							<p>安防设备</p>
-							<p>光伏设备</p>
-							<p>储能设备</p>
+							<h2><a href="products.html">产品代理</a></h2>
+							<p><a href="products/mobile/mobile.html">智能手机</a></p>
+							<p><a href="products/network/network.html">网络设备</a></p>
+							<p><a href="products/security/security.html">安防设备</a></p>
+							<p><a href="products/solar/solar.html">光伏设备</a></p>
+							<p><a href="products/battery/battery.html">储能设备</a></p>
 							<p></p>
 						</div>
 					</div>
 				</div>
-				<div class="row mt-5">
+				<div class="row mt-2">
 					<div class="services-2 d-flex">
-						<div class="icon mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-books"></span></div>
+						<div class="icon mt-2 mr-2 d-flex justify-content-center align-items-center"><span class="flaticon-books"></span></div>
 						<div class="text">
-							<h3>其他企业服务</h3>
-							<h3></h3>
-							<p>伊比利亚半岛人才猎聘服务</p>
-							<p>中资出海咨询服务</p>
-							<p>营销活动策划</p>
+							<h2><a href="gooverseas.html">中资落地服务</a></h2>
+							<p><a href="gooverseas/gooverseas/go.html">出海孵化</a></p>
+							<p><a href="gooverseas/hr/hr.html">人才猎聘</a></p>
+							<p><a href="gooverseas/marketing/marketing.html">市场营销</a></p>
+							<p><a href="gooverseas/admin/admin.html">行政服务</a></p>
 						</div>
 					</div>
 				</div>
@@ -141,29 +138,47 @@
 <section class="ftco-section contact-section">
 	<div class="container">
 		<div class="row d-flex mb-5 contact-info">
-			<div class="col-md-4 d-flex">
-				<div class="bg-light align-self-stretch box p-4 text-center">
+			<div class="col-md-3 d-flex">
+				<div class="bg-light align-items-stretch box p-4 text-center">
 					<div>
 						<img src="images/ceo.jpg" alt = "" width="100%" height="100%" style="align-items: center">
 						<h2 class="mb-4">CEO</h2>
-						<p>Yanik Yang</p>
+						<h3>Yanik Yang</h3>
+						<p>西班牙唯一具有欧洲金融投资顾问执照EFA华人，具有西班牙保荐人资格，中文、英文、西语、法语、专业投资理财服务。</p>
 					</div>
 
 				</div>
 			</div>
-			<div class="col-md-4 d-flex">
-				<div class="bg-light align-self-stretch box p-4 text-center">
+			<div class="col-md-3 d-flex">
+				<div class="bg-light align-items-stretch box p-4 text-center">
 					<div>
 						<img src="images/cto.jpg" alt = "" width="100%" height="100%" style="align-items: center">
 						<h2 class="mb-4">CTO</h2>
-						<p>Yanik Yang</p>
+						<h3>Lisa Hu</h3>
+						<p>高级IT工程师</p>
+						<p>资深设计师</p>
+						<p>国家一级注册建筑师</p>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4 d-flex">
-				<div class="bg-light align-self-stretch box p-4 text-center">
-					<h3 class="mb-4">Online Time:</h3>
-					<p>09:00-23:00</p>
+			<div class="col-md-3 d-flex">
+				<div class="bg-light align-items-stretch box p-4 text-center">
+					<div>
+						<img src="images/cmo.jpg" alt = "" width="100%" height="100%" style="align-items: center">
+						<h2 class="mb-4">CMO</h2>
+						<h3>Teresa Zhang</h3>
+						<p>高级活动策划专家</p>
+						<p>Digital Marketing专家</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3 d-flex">
+				<div class="bg-light align-items-stretch box p-4 text-center">
+					<div>
+						<img src="images/cmo.jpg" alt = "" width="100%" height="100%" style="align-items: center">
+						<h2 class="mb-4">CMO</h2>
+						<h3>Lisa Hu</h3>
+					</div>
 				</div>
 			</div>
 
@@ -175,8 +190,9 @@
 	<div class="container">
 		<div class="row justify-content-center mb-5 pb-2">
 			<div class="col-md-8 text-center heading-section heading-section-black ftco-animate">
-				<h2 class="mb-4"><span>About</span> Me</h2>
-				<p>Profesional, autorizado, rápido</p>
+				<h2 class="mb-4"><span>关于</span>睿泽国际</h2>
+				<h3>启迪智慧，创造未来</h3>
+				<h3>专业 高效 精准 负责</h3>
 			</div>
 		</div>
 <!--		添加送spbre nosotros --------------------------------------------------------------------------------------------   -->
