--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
 <section class="ftco-section">
 	<div class="container-fluid" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
-		<div class="row justify-content-center mb-5 pb-2" >
+		<div class="row justify-content-center mb-5 pb-1" >
 			<div class="col-md-8 text-center heading-section ftco-animate">
 				<br>
 				<h2 class="mb-4"><span>请查看公司</span>成功案例</h2>
@@ -197,15 +197,13 @@
 				<div class="blog-entry">
 					<div class="img-wrap d-flex align-items-stretch">
 
-						<div class="img col-md-4 col-lg-4 ftco-animate" style="background-image: url(images/service1.jpg);"></div>
-						<div class="col-md-12  col-lg-8 ftco-animate" style = "background-color: #f8f9fc">
-							<div class="text bg-white p-4">
-							<div class="px-4 dropdown-item-text">
-
-								<H2>金融投资服务案例</H2>
-								<p><a>【案例一】华意压缩机集团是国内上市公司。曾经排名全球压缩机行业第四，收购排名第三的西班牙Cubig压缩机公司。将西班牙Cubig公司的债务剥离， 收购了其生产主体，包括生产和管理团队与不动产设备。 最终一跃站上了全球压缩机行业的第二把交椅。</a></p>
-								<p><a>【案例二】爱尔收购欧洲专业眼科机构股票定增。
-									独家承销被爱尔眼科收购的Clinic Barviera，在西班牙资本市场股票定增发行业务为股票估值定价，召开国际投资机构路演，各类机构，家族办公室等 投资者说明，与各家投资机构磋商对价和收购份额；国际股权交易，香港证交所共同配合，成功完成交易。</a></p>
+						<div class="img col-md-12 col-lg-3 ftco-animate" style="background-image: url(images/service1.jpg); "></div>
+						<div class="col-md-12  col-lg-9 ftco-animate" style = "background-color: #f8f9fc">
+							<div class="text bg-white p-1">
+							<div class="px-0">
+								<H4>金融投资服务案例</H4>
+								<p><a>【案例一】华意压缩机集团是国内上市公司。</a></p>
+								<p><a>【案例二】爱尔收购欧洲专业眼科机构股票定增。</a></p>
 							</div>
 							<div class="d-flex align-items-center mt-4">
 								<p  class="mb-0"><a href="investment/investment_case.html" class="btn btn-secondary">点击查看案例详情<span class="ion-ios-arrow-round-forward"></span></a></p>
@@ -220,39 +218,17 @@
 				<div class="blog-entry">
 					<div class="img-wrap d-flex align-items-stretch">
 
-						<div class="img col-md-4 col-lg-4 ftco-animate" style="background-image: url(images/service2.jpg);">
+						<div class="img col-md-12 col-lg-3 ftco-animate" style="background-image: url(images/service2.jpg);">
 						</div>
-						<div class="col-md-8  col-lg-8 ftco-animate" style = "background-color: #f8f9fc">
-							<div class="text bg-white p-4">
-							<div class="px-4">
-
-								<H2>IT解决方案案例介绍</H2>
-								<p>西班牙本土华人企业G公司，其新上线电商业务采用了最新云技术为其提供IT基础设施，BOI根据该公司电商业务未来五年的发展，为其设计软件架构，并协助其营销活动。</p>
-							</div>
-							<div class="d-flex align-items-center mt-4">
-								<p  class="mb-0"><a href="ittech/ittech_case.html" class="btn btn-secondary">点击查看案例详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-							</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-md-12 col-lg-12 ftco-animate ">
-				<div class="blog-entry">
-					<div class="img-wrap d-flex align-items-stretch">
-
-						<div class="img col-md-4 col-lg-4 ftco-animate" style="background-image: url(images/service3.jpg);">
-						</div>
-						<div class="col-md-8  col-lg-8 ftco-animate" style = "background-color: #f8f9fc">
-							<div class="text bg-white p-4">
-							<div class="px-4">
-								<H2>产品代理案例介绍</H2>
-								<p>BOI已于VIVO、XIAOMI、等智能手机公司签署协议，成为其B2B渠道商，代理其在西班牙境内的B2B销售业务。</p>
-							</div>
-							<div class="d-flex align-items-center mt-4">
-								<p  class="mb-0"><a href="products/products_case.html" class="btn btn-secondary">点击查看案例详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-							</div>
+						<div class="col-md-12  col-lg-9 ftco-animate" style = "background-color: #f8f9fc">
+							<div class="text bg-white p-1">
+								<div class="px-0">
+									<H4>IT解决方案案例介绍</H4>
+									<p>西班牙本土华人企业G公司，其新上线电商业务采用了最新云技术，睿泽国际作为软件架构顾问，并协助其营销活动。</p>
+								</div>
+								<div class="d-flex align-items-center mt-4">
+									<p  class="mb-0"><a href="ittech/ittech_case.html" class="btn btn-secondary">点击查看案例详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -263,17 +239,38 @@
 				<div class="blog-entry">
 					<div class="img-wrap d-flex align-items-stretch">
 
-						<div class="img col-md-4 col-lg-4 ftco-animate" style="background-image: url(images/service4.jpg);">
+						<div class="img col-md-12 col-lg-3 ftco-animate align-items-stretch" style="background-image: url(images/service3.jpg);">
 						</div>
-						<div class="col-md-8  col-lg-8 ftco-animate" style = "background-color: #f8f9fc">
-							<div class="text bg-white p-4">
-							<div class="px-4">
-								<H2>中资落地案例介绍</H2>
-								<p>BOI已与多家中企签署协议，代理企业西班牙相关法务、税务、人才猎聘等业务，助力中资出海。</p>
+						<div class="col-md-12  col-lg-9 ftco-animate" style = "background-color: #f8f9fc">
+							<div class="text bg-white p-1">
+								<div class="px-0">
+									<H4>产品代理案例介绍</H4>
+									<p>BOI已于VIVO、XIAOMI、等智能手机公司签署协议，成为其B2B渠道商，代理其在西班牙境内的B2B销售业务。</p>
+								</div>
+								<div class="d-flex align-items-end mt-4" st>
+									<p  class="mb-0"><a href="products/products_case.html" class="btn btn-secondary">点击查看案例详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+								</div>
 							</div>
-							<div class="d-flex align-items-center mt-4">
-								<p  class="mb-0"><a href="gooverseas/gooverseas_case.html" class="btn btn-secondary">点击查看案例详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-12 col-lg-12 ftco-animate ">
+				<div class="blog-entry">
+					<div class="img-wrap d-flex align-items-stretch">
+
+						<div class="img col-md-12 col-lg-3 ftco-animate" style="background-image: url(images/service4.jpg);">
+						</div>
+						<div class="col-md-12 col-lg-9 ftco-animate" style = "background-color: #f8f9fc">
+							<div class="text bg-white p-1">
+								<div class="px-0">
+									<H4>中资落地案例介绍</H4>
+									<p>BOI已与多家中企签署协议，代理企业西班牙相关法务、税务、人才猎聘等业务，助力中资出海。</p>
+								</div>
+								<div class="d-flex align-items-center mt-4">
+									<p  class="mb-0"><a href="gooverseas/gooverseas_case.html" class="btn btn-secondary">点击查看案例详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+								</div>
 							</div>
 						</div>
 					</div>
