--- a/investment/investment_case.html
+++ b/investment/investment_case.html
@@ -51,8 +51,8 @@
 			<div class="col-md-9 ftco-animate text-center">
 				<h1 class="mb-2 bread">金融投资保险服务</h1>
 				<p>
-					<a href="../investment/projects/investment_projects.html" class="btn btn-info px-4 py-3"> 金融投资项目</a>
-					<a href="../investment/projects/investment_projects.html" class="btn btn-info px-4 py-3"> 资产管理</a>
+					<a href="investment/investment_projects.html" class="btn btn-info px-4 py-3"> 金融投资项目</a>
+					<a href="investment/investment_projects.html" class="btn btn-info px-4 py-3"> 资产管理</a>
 					<a href="../investment/mapfre/mapfre_seguro.html" class="btn btn-info px-4 py-3"> MAPFRE保险</a>
 				</p>
 			</div>
