--- a/ittech/security/security.html
+++ b/ittech/security/security.html
@@ -44,18 +44,17 @@
 
 
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('../../images/bg_7.jpg');">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('../../images/bg_8.jpg');">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<h1 class="mb-2 bread">企业IT技术解决方案</h1>
+				<h3 class="mb-2 bread">企业IT技术</h3>
+				<h1 class="mb-2 bread">企业安保解决方案</h1>
 				<p class="breadcrumbs">
-				<p>
-					<a href="../cloud/cloud.html" class="btn btn-info px-4 py-3"> 云技术解决方案</a>
-					<a href="../network/network.html" class="btn btn-info px-4 py-3"> 企业网络解决方案</a>
-					<a href="../security/security.html" class="btn btn-info px-4 py-3"> 企业安保解决方案</a>
-				</p>
+					<span class="mr-2"><a href="cloud.html"> 云技术解决方案<i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../network/network.html"> 企业网络解决方案<i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../security/security.html"> 企业安保解决方案<i class="ion-ios-arrow-forward"></i></a></span>
 			</div>
 		</div>
 	</div>
