--- a/products/mobile/mobile.html
+++ b/products/mobile/mobile.html
@@ -49,7 +49,8 @@
     <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center">
             <div class="col-md-9 ftco-animate text-center">
-                <h1 class="mb-2 bread">智能手机B2B代理</h1>
+                <h3 class="mb-2 bread">产品代理</h3>
+				<h1 class="mb-2 bread">智能手机</h1>
 				<p class="breadcrumbs">
 					<span class="mr-2"><a href="../mobile/mobile.html">智能手机 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../network/network.html">网络设备 <i class="ion-ios-arrow-forward"></i></a></span>
