--- a/products/network/network.html
+++ b/products/network/network.html
@@ -49,7 +49,8 @@
     <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center">
             <div class="col-md-9 ftco-animate text-center">
-                <h1 class="mb-2 bread">网络设备B2B代理</h1>
+				<h3 class="mb-2 bread">产品代理</h3>
+				<h1 class="mb-2 bread">网络设备</h1>
 				<p class="breadcrumbs">
 					<span class="mr-2"><a href="../mobile/mobile.html">智能手机 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../network/network.html">网络设备 <i class="ion-ios-arrow-forward"></i></a></span>
@@ -159,11 +160,6 @@
 
 					</div>
 				</div>
-
-<!--				<p class="mb-0">Whatsapp</p>-->
-<!--				<img src="../../images/whatsappQRCode.png" style="width: auto; height: 50%">-->
-<!--				<p class="mb-0">Wechat</p>-->
-<!--				<img src="../../images/wechatQRCode.jpg" style="width: auto; height: 50%">-->
 			</div>
 		</div>
 	</div>
